force-app/main/default/objects/Billing_Center_Dataset_Config__c/Billing_Center_Dataset_Config__c.object-meta.xml
<CustomObject>
    <description>Defines the logical data source used by a tab or section.</description>
    <label>Billing Center Dataset Config</label>
    <nameField>
        <displayFormat>BCDAT-{00000}</displayFormat>
        <label>Billing Center Dataset Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center Dataset Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>