force-app/main/default/objects/Billing_Center_Dataset_Config__c/fields/Data_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Type__c</fullName>
    <label>Data Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Handler</fullName>
            </value>
            <value>
                <fullName>SOQL Config</fullName>
            </value>
            <value>
                <fullName>Aggregated Snapshot</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>