force-app/main/default/objects/Billing_Center_Dataset_Config__c/fields/Default_Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>Default_Sort_Direction__c</fullName>
    <label>Default Sort Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>