force-app/main/default/objects/Billing_Center_Dataset_Config__c/fields/Default_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Default_Sort_Field__c</fullName>
    <label>Default Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>