force-app/main/default/objects/Billing_Center_Dataset_Config__c/fields/Max_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Row_Limit__c</fullName>
    <label>Max Row Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>